3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fix template plugin generation and compilation.
 plugins/template/plugin_template.c: fix compilation and parameter order for strncpy.
 plugins/template/create_plugin.sh: missing "exit" to quit if no name.
Nicolas Weeger, 2008-01-26

utils/mapper.c: new option, "-regionslink", to generate a .dot file containing
 relationship between regions. New option "-noworldmap" to not generate the full
 world map. Use region's longname instead of the short name in regions index.
 Change world map size from 30xtiles to 50xtiles.
Nicolas Weeger, 2008-01-26

.cvsignore files created in types subdirectories and svn:ignore set.
Kevin Bulgrien
  
Spelling mistakes corrected.
  README
  configure.ac
  doc/crossfire-server.man
Kevin Bulgrien

Solved an issue about the portability of strerror_r.
 common/porting.c
Yann "gros" Chachkoff, 2008-01-25

Add F_BLESSED to send blessed status to client.
 include/newclient.h
 socket/item.c
Nicolas Weeger, 2008-01-24

plugins/cfpython/cfpython.c: add EVENT_USER to defined constants.
Nicolas Weeger, 2008-01-24

Documentation, no functional change.
 common/treasure.c: link functions to the relevant page.
 doc/Developers/collect.dox: new file.
 doc/Developers/mainpage.dox: link to collect process.
 doc/Developers/treasure_list.dox: add much content.
Nicolas Weeger, 2008-01-16

Commit combat rebalancing.  Combat is slower now, so less deadly.  If player
is idle, they get faster hp/sp regen.  Allow generators to have limit on
number of monsters they generate before disappearing.  Starting characters
all have same stat total (re-rolling may make the distribution different,