@@ -21,6 +21,7 @@ Here is a list of topics:
 - @ref page_treasure_list
 - @ref page_client
 - @ref page_collect
+- @ref plugin_citylife
 - @ref type_index
 - @ref TYPE_BUILDER
 - @ref TYPE_MATERIAL
